--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "antd": "^5.15.2",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "firebase": "^10.8.1",
     "react": "^18.2.0",
